--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
  </head>
   
  <body>
-     <h1>Blog Title<h1>
+     <h1>Tuesday, 11/19<h1>
+     <p1>Goal: My goal for Tuesday was to add the popup bubbles to big cities on the map on my website. 
+       <br>Process: In order to accomplish this goal, I used the mapbox webiste for reference on ways to add images and text within the map.</br>
+         Problems you ran into
+         Solutions to those problems
+         Outcome: actualy output and also things that you learned along the way
  </body>
 </html>
