--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <h1>Tuesday, 11/19<h1>
      <p1>Goal: My goal for Tuesday was to add the popup bubbles to big cities on the map on my website. 
        <br>Process: In order to accomplish this goal, I used the mapbox webiste for reference on ways to add images and text within the map.</br>
-         Problems you ran into
+       <br>Problem: A problem that I ran into this tuesday was finding a way to upload images to my map.</br>
          Solutions to those problems
          Outcome: actualy output and also things that you learned along the way
  </body>
