--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   
  <body>
      <h1>Tuesday, 11/19<h1>
-     <p1>Goal: My goal for Tuesday was to add the popup bubbles to big cities on the map on my website. 
+     <p1>
+       Goal: My goal for Tuesday was to add the popup bubbles to big cities on the map on my website. 
        <br>Process: In order to accomplish this goal, I used the mapbox webiste for reference on ways to add images and text within the map.</br>
        <br>Problem: A problem that I ran into this tuesday was finding a way to upload images to my map.</br>
-         Solutions to those problems
-         Outcome: actualy output and also things that you learned along the way
+       <br>Solution: A solution for my image problem involved using mapbox code as reference and getting help from my supervisor, Kajari.</br>
+       <br>Outcome: I now have a map that fully works and there are multiple cities throughout the U.S. that have the popup bubbles on my map.</br>
+     </p1>
  </body>
 </html>
