--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <br>Process: In order to accomplish this goal, I used the mapbox webiste for reference on ways to add images and text within the map.</br>
        <br>Problem: A problem that I ran into this tuesday was finding a way to upload images to my map.</br>
        <br>Solution: A solution for my image problem involved using mapbox code as reference and getting help from my supervisor, Kajari.</br>
-       <br>Outcome: I now have a map that fully works and there are multiple cities throughout the U.S. that have the popup bubbles on my map.</br>
+       <br>Outcome: I now have a map that fully works and there are multiple cities throughout the U.S. that have the popup bubbles on my <a href="https://www.w3schools.com/html/">website.</br>
     </p>
  </body>
 </html>
