--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
  <body>
      <h1>Tuesday, 11/19<h1>
      <p>
-       <br>Goal: My goal for Tuesday was to add the popup bubbles to big cities on the map on my website.</br> 
-       <br>Process: In order to accomplish this goal, I used the mapbox webiste for reference on ways to add images and text within the map.</br>
+       Goal: My goal for Tuesday was to add the popup bubbles to big cities on the map on my website.
+       <br>Process: I used the <a href="https://docs.mapbox.com/mapbox-gl-js/example/popup-on-click/">Mapbox GL JS to add speech bubbles and icons to the the map. We came into some trouble with the icons because we needed to enable sprites in the style. We did that by going to Mapbox Studio and enabling the sprite icons that I wanted to use in my style. A sprite is a two-dimensional bitmap that is integrated into a larger scene such as a 2D video game.</br>
        <br>Problem: A problem that I ran into this tuesday was finding a way to upload images to my map.</br>
        <br>Solution: A solution for my image problem involved using mapbox code as reference and getting help from my supervisor, Kajari.</br>
-       <br>Outcome: I now have a map that fully works and there are multiple cities throughout the U.S. that have the popup bubbles on my <a href="https://www.w3schools.com/html/">website.</br>
+       <br>Outcome: I now have a map that fully works and there are multiple cities throughout the U.S. that have the popup bubbles on my <a href="https://xiomaraquinonez.github.io/MAGIC/#">website.</br>
     </p>
  </body>
 </html>
